# afk

./: CMakeLists.txt  README.md
include/afk/: algorithm.h
test/: algorithm_tests.cpp
